# agx

./: .dockerignore  .gitignore  .prettierignore  .prettierrc  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yaml  package-lock.json  package.json  svelte.config.js  vite.config.js
.github/workflows/: test.yaml
conf/: config.xml  users.xml
scripts/: install_agnostic_udfs.sh
src/: app.html  global.css  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  fix_dylib.sh  tauri.conf.json  update_libchdb.sh
src-tauri/binaries/: download.sh
src-tauri/capabilities/: default.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: bindings.rs  clickhouse.rs  commands.rs  conf.rs  main.rs  query_result.rs
src-tauri/src/chdb/: arg.rs  bindings.rs  lib.rs  mod.rs  query_result.rs  session.rs
src-tauri/src/commands/: mod.rs
src/lib/: FileDropEventManager.ts  PanelState.svelte.ts  auth.ts  context.ts  database.ts  downloadResultset.ts  editor.svelte  hints.ts  query.ts  schema.svelte  slugify.ts  sources.svelte.ts  store.ts  table.svelte  types.d.ts  utils.ts
src/lib/actions/: autoresize.svelte.ts  portal.svelte.ts  scrollToBottom.svelte.ts
src/lib/ch-engine/: index.ts  query.ts  sources.svelte.ts  types.d.ts
src/lib/components/: ChartContainer.svelte  Console.svelte  Drawer.svelte  History.svelte  Login.svelte  Modal.svelte  ProxySwitch.svelte  Result.svelte  SearchBar.svelte  Select.svelte  SideBar.svelte  Tab.svelte  Table.svelte  TimeCounter.svelte  WindowTitleBar.svelte
src/lib/database/: index.ts
src/lib/editor/: SQLDialect.ts  index.ts  utils.ts
src/lib/icons/: ArrowUp.svelte  Bars3.svelte  Bold.svelte  ChevronDown.svelte  CircleStack.svelte  CircleStopSolid.svelte  ClipboardText.svelte  CollapseAll.svelte  CommandLine.svelte  Copy.svelte  Database.svelte  Download.svelte  Folder.svelte  FolderOpen.svelte  MagicWand.svelte  PanelBottom.svelte  PanelLeft.svelte  PanelRight.svelte  PaperClip.svelte  Play.svelte  Plus.svelte  SQLFile.svelte  Save.svelte  Search.svelte  Send.svelte  (+9 more)
src/routes/: +layout.svelte  +page.svelte  +page.ts
(+88 files in other folders)
