[package]
name = "agx"
version = "0.1.0"
description = "A Tauri App"
authors = ["Didier Franc"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "1", features = [] }
bindgen = "0.70.1"

[dependencies]
tauri = { version = "1", features = [ "window-unmaximize", "window-start-dragging", "window-maximize", "shell-open" ] }
tauri-plugin-context-menu = "0.8.2"
thiserror = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
