[package]
name = "agx"
version = "0.3.0"
description = "A Tauri App"
authors = ["Didier Franc"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "2", features = [] }
bindgen = "0.70.1"

[dependencies]
serde_json = "1.0.133"
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
thiserror = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
